<resources>
    <string name="app_name">FunnelZara</string>
    <string name="searchBarTitle">¿Qué estás buscando?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar">Cerrar</string>
    <string name="cesta_1">CESTA (1)</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="quieres_tu_pedido_para_regalo">¿QUIERES TU PEDIDO PARA REGALO?</string>
    <string name="icono_cesta_vac_a">Icono cesta vacía</string>
    <string name="tu_cesta_est_vacia">TU CESTA ESTÁ VACIA</string>
    <string name="los_art_culos_que_a_adas_se_mostrar_n_aqu">Los artículos que añadas se mostrarán aquí</string>
    <string name="continuar">CONTINUAR</string>
    <string name="disfruta_la_mejor_experiencia">DISFRUTA LA MEJOR EXPERIENCIA</string>
    <string name="ident_ficate_para_disfrutar_de_una_experiencia_personalizada_y_acceder_a_todos_nuestros_servicios">Identíficate para disfrutar de una experiencia personalizada y acceder a todos nuestros servicios.</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="reg_strate">REGÍSTRATE</string>
    <string name="continuar_como_invitado">Continuar como invitado</string>
    <string name="bot_n_atr_s">Botón Atrás</string>
    <string name="datos_personales">DATOS PERSONALES</string>
    <string name="c_digo_postal">CÓDIGO POSTAL</string>
    <string name="guardar">GUARDAR</string>
    <string name="email">EMAIL</string>
    <string name="nombre">NOMBRE</string>
    <string name="apellidos">APELLIDOS</string>
    <string name="direccion2">DIRECCIÓN</string>
    <string name="piso_puerta_u_otro">PISO/PUERTA U OTRO</string>
    <string name="provincia">PROVINCIA</string>
    <string name="regi_n">REGIÓN</string>
    <string name="espa_a">España</string>
    <string name="empresa">EMPRESA</string>
    <string name="tel_fono">TELÉFONO</string>
    <string name="casa">CASA</string>
    <string name="tienda_de_zara">TIENDA DE ZARA</string>
    <string name="punto_de_entrega">PUNTO DE ENTREGA</string>
    <string name="carrer_mol_d_en_rata_10">CARRER MOLÍ D\'EN RATA 10</string>
    <string name="art_culos">ARTÍCULOS</string>
    <string name="viernes_15_de_noviembre">VIERNES 15 DE NOVIEMBRE</string>
    <string name="friday_price">3,95 EUR</string>
    <string name="friday_shippment_msg">Envío gratuito a partir de 30 EUR aplica solo a artículos sin descuento</string>
    <string name="thursday_shippment">JUEVES 14 DE NOVIEMBRE</string>
    <string name="thursday_price">4,95 EUR</string>
    <string name="thursday_shippment_msg">Entrega garantizada</string>
    <string name="elige_un_m_todo_de_pago">ELIGE UN MÉTODO DE PAGO</string>
    <string name="total">TOTAL</string>
    <string name="_13_90_eur">13,90 EUR</string>
    <string name="visa">VISA</string>
    <string name="mastercard">MASTERCARD</string>
    <string name="american_express">AMERICAN EXPRESS</string>
    <string name="bizum">BIZUM</string>
    <string name="paypal">PAYPAL</string>
    <string name="affinity">AFFINITY</string>
    <string name="tarjeta_regalo">TARJETA REGALO</string>
    <string name="apple_pay">APPLE PAY</string>
    <string name="viernes_shippment">VIERNES 15 DE NOVIEMBRE</string>
    <string name="num_articulo">1 artículo</string>
    <string name="env_o_a_domicilio">ENVÍO A DOMICILIO</string>
    <string name="entrega_viernes_15_de_noviembre">Entrega viernes 15 de noviembre</string>
    <string name="info_shippment">El envío gratuito a partir de 30 EUR aplica solo a artículos sin descuento.</string>
    <string name="example_name">PAULA LOPÉZ</string>
    <string name="example_address_info">Carrer Moli d’en rata 10\n08290, Cerdanyola, BARCELONA\nEspaña\n+34 605852358</string>
    <string name="apple_pay_upper">APPLE PAY</string>
    <string name="total_upper">TOTAL</string>
    <string name="total_price">13,90 EUR</string>
    <string name="autorizar_el_pago">AUTORIZAR EL PAGO</string>
    <string name="order_info">En cuanto tu pedido salga del almacén, recibirás un correo para seguir su estado.</string>
    <string name="order_info_email">Los detalles de tu pedido han sido enviados a tu correo electrónico.</string>
    <string name="msg_order_success">¡Pedido realizado con éxito!</string>
    <string name="volver_a_la_tienda">Volver a la tienda</string>
    <string name="barra_de_b_squeda">Barra de búsqueda</string>
    <string name="te_puede_interesar">TE PUEDE INTERESAR</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="a_adir">AÑADIR</string>
    <string name="selecciona_una_talla">SELECCIONA UNA TALLA</string>
    <string name="info_size">Si necesitas ayuda, indícanos tus medidas y calcularemos cuál es la talla que más se adapta a ti.</string>
    <string name="recomendador_de_talla">RECOMENDADOR DE TALLA</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="s">S</string>
    <string name="cesta">Cesta</string>
    <string name="bot_n_restar_cantidad">Botón restar cantidad</string>
    <string name="bot_n_sumar_cantidad">Botón sumar cantidad</string>

    <string-array name="provinces">
        <item>Madrid</item>
        <item>Barcelona</item>
        <item>Valencia</item>
        <item>Sevilla</item>
        <item>Granada</item>
    </string-array>


</resources>