<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:layout_gravity="bottom"
    android:elevation="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/selecciona_una_talla"
        android:textSize="13sp"
        android:fontFamily="@font/helvetica_neue_light"
        android:textColor="@android:color/black"
        android:gravity="left"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_neue_light"
        android:gravity="left"
        android:lineSpacingExtra="5sp"
        android:paddingBottom="16dp"
        android:text="@string/info_size"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <Button
        android:id="@+id/suggestSize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/recomendador_de_talla"
        app:backgroundTint="@null"
        style="@style/CustomButtonStyle"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/helvetica_neue_light" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/sizeSmall"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="@string/s"
                android:layout_marginEnd="8dp"
                app:backgroundTint="@null"
                style="@style/CustomButtonStyle"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textSize="20sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/sizeMedium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:backgroundTint="@null"
                style="@style/CustomButtonStyle"
                android:textSize="20sp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="@string/m"
                android:fontFamily="@font/helvetica_neue_light"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/sizeLarge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="20sp"
                app:backgroundTint="@null"
                style="@style/CustomButtonStyle"
                android:fontFamily="@font/helvetica_neue_light"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="@string/l"
                app:cornerRadius="0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/selectSizeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CONTINUAR"
        app:backgroundTint="@null"
        style="@style/CustomButtonStyle"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="0dp"
        android:padding="8dp"
        android:textSize="14sp"
        android:fontFamily="@font/helvetica_neue_light" />

</LinearLayout>
