<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".screens.FomularioEnvioActivity">
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:contentDescription="@string/bot_n_atr_s"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_container_shopping_bag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeOption"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/mirrored_icon"
            android:fontFamily="@font/helvetica_neue_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/casa"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:cornerRadius="0dp"
            android:paddingTop="15dp"
            app:iconPadding="-10dp"
            app:iconSize="10dp" />

        <Button
            android:id="@+id/storeOption"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/building18"
            android:fontFamily="@font/helvetica_neue_light"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/tienda_de_zara"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:cornerRadius="0dp"
            android:paddingTop="20dp"
            app:iconPadding="-10dp"
            app:iconSize="5dp"
        />


        <Button
            android:id="@+id/pickupOption"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/location"
            android:fontFamily="@font/helvetica_neue_light"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="20dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/punto_de_entrega"
            android:textSize="10sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:cornerRadius="0dp"
            app:iconPadding="-10dp"
            app:iconSize="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/carrer_mol_d_en_rata_10"
        android:textSize="12sp"
        app:backgroundTint="@null"
        android:paddingStart="20dp"
        android:padding="0dp"
        android:fontFamily="@font/helvetica_neue_light"
        style="@style/CustomButtonStyle"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/optionsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textArticles"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/helvetica_neue_light"
        android:text="@string/art_culos"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/productsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTextView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textArticles" />

    <RadioGroup
        android:id="@+id/shippingOptionsGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/productsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/optionFriday"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/helvetica_neue_light"
                    android:includeFontPadding="false"
                    android:padding="0dp"
                    app:buttonTint="@android:color/black" />

                <TextView
                    android:id="@+id/optionFridayTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/viernes_15_de_noviembre"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/optionFridayPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue_light"
                    android:gravity="right"
                    android:text="@string/friday_price"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/optionFridayCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/helvetica_neue_light"
                android:text="@string/friday_shippment_msg"
                android:textSize="12sp"
                app:lineHeight="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/optionTuesday"
                    android:textColorLink="#000000"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    app:buttonTint="@android:color/black"
                    android:fontFamily="@font/helvetica_neue_light"
                    android:includeFontPadding="false"
                    android:padding="0dp" />

                <TextView
                    android:id="@+id/optionTuesdayTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/thursday_shippment"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/optionTuesdayPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue_light"
                    android:gravity="right"
                    android:text="@string/thursday_price"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/optionTuesdayCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/helvetica_neue_light"
                android:text="@string/thursday_shippment_msg"
                android:textSize="12sp" />

        </LinearLayout>




    </RadioGroup>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:backgroundTint="@android:color/black"
        android:buttonTint="@android:color/black"
        android:fontFamily="@font/helvetica_neue_light"
        android:text="CONTINUAR"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerTotal"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/containerTotal"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippingOptionsGroup">

        <TextView
            android:id="@+id/shippingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="ENVÍO" />

        <TextView
            android:id="@+id/shippingFinalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_neue_medium"
            android:gravity="end"
            android:text="3,95 EUR" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>