<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".screens.PedidoRealizadoActivity">

    <ImageView
        android:id="@+id/zaraLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="Logo Zara"
        android:src="@drawable/zara_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderConfirmationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:gravity="center"
        android:text="@string/msg_order_success"

        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/emailDetailsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zaraLogo" />

    <TextView
        android:id="@+id/emailDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.3"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/order_info_email"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderConfirmationText" />

    <TextView
        android:id="@+id/shipmentFollowUpText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/helvetica_neue_light"
        android:gravity="center"
        android:layout_marginLeft="10dp"

        android:layout_marginStart="10dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/order_info"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/continueShoppingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailDetailsText" />

    <Button
        android:id="@+id/continueShoppingButton"
        style="@style/CustomButtonStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/helvetica_neue_light"
        android:text="@string/volver_a_la_tienda"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:backgroundTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipmentFollowUpText" />

</androidx.constraintlayout.widget.ConstraintLayout>
